--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "lib": ["es6"],
     "strict": true,
     "moduleResolution": "node",
-    "typeRoots": ["./node_modules/@figma"]
-  }
+    "typeRoots": ["./node_modules/@figma"],
+    "outDir": "./dist" // Add this line
+  },
+  "include": ["./src/**/*.ts"] // Add this line
 }
